A lot of updates more streamlines no scraping functions updated
